--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<title>HAPPY BIRTHDAY TRAVIS</title>
+<title>HAPPY BIRTHDAY DAVID</title>
 <link rel="stylesheet" type="text/css" href="style/fireworks.css" media="screen" />
 <script type="text/javascript" src="script/fireworks.js"></script>
 
